# gpx-renamer

./: README.md  setup.cfg
samples/: osm3857249.gpx
