[metadata]
name = gpx-renamer
version = 0.0.1
author = Abdellah Chelli
author_email = abdellahchelli@gmail.com
description = File renamer for GPX traces
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    GIS
    GPS
    gpx
    trace
    track
    rename
    script
url = https://github.com/sneetsher/gpx-renamer
project_urls =
    Bug Tracker = https://github.com/sneetsher/gpx-renamer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
scripts =
    bin/gpx-renamer
    bin/gpx-renamer-min
    bin/gpx-renamer-short
    bin/gpx-renamer-long
python_requires = >=3.6
install_requires =
    gpxpy
    reverse-geocode

[options.packages.find]
where = src
